--- a/latest version/templates/web/allplayer.html
+++ b/latest version/templates/web/allplayer.html
@@ -14,6 +14,7 @@
     </div>
     <div class="join-date">注册于 Registered in: {{user['join_date']}}</div>
     <div class="ptt">PTT: {{user['rating_ptt']//100 ~ '.' ~ user['rating_ptt']%100}}</div>
+    <div class="ptt">Memories: {{user['ticket']}}</div>
     <div>
         <div>Recent plays: </div>
         <div>
