--- a/latest version/templates/web/index.html
+++ b/latest version/templates/web/index.html
@@ -14,11 +14,14 @@
 <a href="{{ url_for('index.single_player_ptt') }}">单个玩家PTT详情查询 Single player ptt</a></br></br>
 <a href="{{ url_for('index.all_player') }}">所有玩家信息查询 All players</a></br></br>
 <a href="{{ url_for('index.all_song') }}">铺面信息查询 All songs</a></br></br>
+<a href="{{ url_for('index.all_character') }}">角色信息查询 All characters</a></br></br>
 <a href="{{ url_for('index.single_chart_top') }}">单个铺面排行榜查询 Single song chart tops</a>
 <hr>
 <h1>系统方面 System</h1>
 <a href="{{ url_for('index.update_database') }}">数据库更新 Update databases</a></br></br>
-<a href="{{ url_for('index.change_song') }}">歌曲修改 Change the songs</a>
+<a href="{{ url_for('index.change_song') }}">歌曲修改 Change the songs</a></br></br>
+<a href="{{ url_for('index.change_character') }}">角色修改 Change the characters</a></br></br>
+<a href="{{ url_for('index.change_user') }}">用户信息修改 Change user information</a>
 
 
 {% endblock %}
