--- a/latest version/templates/web/changeuser.html
+++ b/latest version/templates/web/changeuser.html
@@ -25,4 +25,13 @@
     <div class="content">At present, only memories can be modified.</div>
     <input type="submit" value="Edit">
 </form>
+<br />
+<hr />
+<form action="/web/changeuser/edituser" method="post">
+    <div class="title">Edit all the users</div>
+    <label for="ticket">Memories</label>
+    <input name="ticket" id="ticket">
+
+    <input type="submit" value="Edit all">
+</form>
 {% endblock %}
