--- a/latest version/templates/web/allplayer.html
+++ b/latest version/templates/web/allplayer.html
@@ -13,7 +13,7 @@
         <span class="rank">User code: {{user['user_code']}}</span>
     </div>
     <div class="join-date">注册于 Registered in: {{user['join_date']}}</div>
-    <div class="ptt">PTT: {{user['rating_ptt']//100 ~ '.' ~ user['rating_ptt']%100}}</div>
+    <div class="ptt">PTT: {{'%0.2f'|format(user['rating_ptt']/100|float)}}</div>
     <div class="ptt">Memories: {{user['ticket']}}</div>
     <div>
         <div>Recent plays: </div>
