--- a/latest version/templates/web/index.html
+++ b/latest version/templates/web/index.html
@@ -16,6 +16,7 @@
 <a href="{{ url_for('index.all_song') }}">铺面信息查询 All songs</a></br></br>
 <a href="{{ url_for('index.all_character') }}">角色信息查询 All characters</a></br></br>
 <a href="{{ url_for('index.all_item') }}">购买信息查询 All items</a></br></br>
+<a href="{{ url_for('index.all_present') }}">奖励信息查询 All presents</a></br></br>
 <a href="{{ url_for('index.single_chart_top') }}">单个铺面排行榜查询 Single song chart tops</a>
 <hr>
 <h1>系统方面 System</h1>
@@ -25,7 +26,9 @@
 <a href="{{ url_for('index.change_character') }}">角色修改 Change the characters</a></br></br>
 <a href="{{ url_for('index.change_item') }}">购买信息修改 Change the items</a></br></br>
 <a href="{{ url_for('index.change_user') }}">用户信息修改 Change user information</a></br></br>
-<a href="{{ url_for('index.change_user_purchase') }}">用户购买信息修改 Change user purchase information</a>
+<a href="{{ url_for('index.change_user_purchase') }}">用户购买信息修改 Change user purchase information</a></br></br>
+<a href="{{ url_for('index.change_present') }}">奖励修改 Change the presents</a></br></br>
+<a href="{{ url_for('index.deliver_present') }}">奖励分发 Deliver the presents</a>
 
 
 {% endblock %}
