--- a/latest version/templates/web/index.html
+++ b/latest version/templates/web/index.html
@@ -23,6 +23,7 @@
 <h1>系统方面 System</h1>
 <a href="{{ url_for('index.update_database') }}">数据库更新 Update databases</a></br></br>
 <a href="{{ url_for('index.edit_userpwd') }}">用户密码修改 Change user password</a></br></br>
+<a href="{{ url_for('index.ban_user') }}">封禁用户 Ban the user</a></br></br>
 <a href="{{ url_for('index.update_user_save') }}">用户存档更新 Update user saves</a></br></br>
 <a href="{{ url_for('index.change_song') }}">歌曲修改 Change the songs</a></br></br>
 <a href="{{ url_for('index.change_character') }}">角色修改 Change the characters</a></br></br>
