Waiting for updating
+ new character
+ new byd map
+ new items
+ some new configs
+ two new operations in background
+ record email while registering
+ record ip while logging in
+ checking something before running and updating database automatically

building something about API

fix bugs:
about purchasing system
about hiding ptt
about login different accounts with same device
about some details

This is only a pre updating. Many things have been changed. It takes time to find some ways.

--- a/latest version/templates/base.html
+++ b/latest version/templates/base.html
@@ -20,4 +20,4 @@
     {% endfor %} {% block content %}{% endblock %}
 </section>
 
-<footer id="footer" class="footer">Made by Lost@2020</footer>
+<footer id="footer" class="footer">Made by Lost@2020-2021</footer>
