--- a/latest version/templates/web/changesong.html
+++ b/latest version/templates/web/changesong.html
@@ -19,7 +19,7 @@
     <input name="rating_ftr" id="rating_ftr" required>
     <label for="rating_byd">Beyond chart const</label>
     <input name="rating_byd" id="rating_byd" required>
-    <div class="content">如果没有某个铺面，应该填入-1。</div>
+    <div class="content">如果没有某个谱面，应该填入-1。</div>
     <div class="content">If there is no some chart, fill in -1 please.</div>
     <input type="submit" value="Add">
 </form>
