--- a/latest version/templates/web/index.html
+++ b/latest version/templates/web/index.html
@@ -13,7 +13,7 @@
 <a href="{{ url_for('index.single_player_score') }}">单个玩家成绩查询 Single player score</a></br></br>
 <a href="{{ url_for('index.single_player_ptt') }}">单个玩家PTT详情查询 Single player ptt</a></br></br>
 <a href="{{ url_for('index.all_player') }}">所有玩家信息查询 All players</a></br></br>
-<a href="{{ url_for('index.all_song') }}">铺面信息查询 All songs</a></br></br>
+<a href="{{ url_for('index.all_song') }}">谱面信息查询 All songs</a></br></br>
 <a href="{{ url_for('index.all_character') }}">角色信息查询 All characters</a></br></br>
 <a href="{{ url_for('index.all_item') }}">购买信息查询 All items</a></br></br>
 <a href="{{ url_for('index.all_present') }}">奖励信息查询 All presents</a></br></br>
