Ready to update to v2.5
Please wait for some time. I need to change readme. I almost forgot what I changed before.
WARNING: There will be many bugs!

--- a/latest version/templates/web/allchar.html
+++ b/latest version/templates/web/allchar.html
@@ -16,24 +16,52 @@
     <span class="char-name">{{char['name']}}</span>
     <br />
 
-    <span>Level: </span>
-    <span class="char-num">{{char['level']}}</span>
+    <span>Max level: </span>
+    <span class="char-num">{{char['max_level']}}</span>
     <br />
 
-    <span>Frag: </span>
-    <span class="char-num">{{char['frag']}}</span>
+    <span>Frag-level 1: </span>
+    <span class="char-num">{{char['frag1']}}</span>
     <br />
 
-    <span>Prog: </span>
-    <span class="char-num">{{char['prog']}}</span>
+    <span>Prog-level 1: </span>
+    <span class="char-num">{{char['prog1']}}</span>
     <br />
 
-    <span>Overdrive: </span>
-    <span class="char-num">{{char['overdrive']}}</span>
+    <span>Overdrive-level 1: </span>
+    <span class="char-num">{{char['overdrive1']}}</span>
+    <br />
+
+    <span>Frag-level 20: </span>
+    <span class="char-num">{{char['frag20']}}</span>
+    <br />
+
+    <span>Prog-level 20: </span>
+    <span class="char-num">{{char['prog20']}}</span>
+    <br />
+
+    <span>Overdrive-level 20: </span>
+    <span class="char-num">{{char['overdrive20']}}</span>
+    <br />
+
+    <span>Frag-level 30: </span>
+    <span class="char-num">{{char['frag30']}}</span>
+    <br />
+
+    <span>Prog-level 30: </span>
+    <span class="char-num">{{char['prog30']}}</span>
+    <br />
+
+    <span>Overdrive-level 30: </span>
+    <span class="char-num">{{char['overdrive30']}}</span>
     <br />
 
     <span>Skill id: </span>
     <span class="char-num">{{char['skill_id']}}</span>
+    <br />
+
+    <span>Skill unlock level: </span>
+    <span class="char-num">{{char['skill_unlock_level']}}</span>
     <br />
 
     <span>Uncapped skill id: </span>
