--- a/latest version/templates/web/changepurchaseitem.html
+++ b/latest version/templates/web/changepurchaseitem.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block header %}
-<h1>{% block title %}Change the items{% endblock %}</h1>
+<h1>{% block title %}Change the purchase's items{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-<form action="/web/changeitem" method="post">
-    <div class="title">Add the item</div>
+<form action="/web/changepurchaseitem" method="post">
+    <div class="title">Add the purchase's item</div>
+    <label for="purchase_name">Purchase name</label>
+    <input name="purchase_name" id="purchase_name" required>
     <label for="item_id">ID of the item</label>
     <input name="item_id" id="item_id" required>
     <label for="type">Type</label>
@@ -18,18 +20,13 @@
         </select>
     </div>
     <br />
-    <div><label for="is_available">是否可用 Is available:</label>
-        <br />
-        <br />
-        <label><input type="radio" name="is_available" checked value=1>True</label>
-        <br />
-        <label><input type="radio" name="is_available" value=0>False</label>
-    </div>
-    <br />
     <input type="submit" value="Add">
 </form>
-<form action="/web/changeitem/delete" method="post">
-    <div class="title">Delete the item</div>
+
+<form action="/web/changepurchaseitem/delete" method="post">
+    <div class="title">Delete the purchase's item</div>
+    <label for="purchase_name">Purchase name</label>
+    <input name="purchase_name" id="purchase_name" required>
     <label for="item_id">ID of the item</label>
     <input name="item_id" id="item_id" required>
     <label for="type">Type</label>
