--- a/latest version/templates/web/index.html
+++ b/latest version/templates/web/index.html
@@ -15,7 +15,8 @@
 <a href="{{ url_for('index.all_player') }}">所有玩家信息查询 All players</a></br></br>
 <a href="{{ url_for('index.all_song') }}">谱面信息查询 All songs</a></br></br>
 <a href="{{ url_for('index.all_character') }}">角色信息查询 All characters</a></br></br>
-<a href="{{ url_for('index.all_item') }}">购买信息查询 All items</a></br></br>
+<a href="{{ url_for('index.all_item') }}">物品信息查询 All items</a></br></br>
+<a href="{{ url_for('index.all_purchase') }}">购买信息查询 All purchases</a></br></br>
 <a href="{{ url_for('index.all_present') }}">奖励信息查询 All presents</a></br></br>
 <a href="{{ url_for('index.all_redeem') }}">兑换码信息查询 All redeem codes</a></br></br>
 <a href="{{ url_for('index.single_chart_top') }}">单个铺面排行榜查询 Single song chart tops</a>
@@ -24,10 +25,13 @@
 <a href="{{ url_for('index.update_database') }}">数据库更新 Update databases</a></br></br>
 <a href="{{ url_for('index.edit_userpwd') }}">用户密码修改 Change user password</a></br></br>
 <a href="{{ url_for('index.ban_user') }}">封禁用户 Ban the user</a></br></br>
+<a href="{{ url_for('index.change_score') }}">成绩删除 Delete the scores</a></br></br>
 <a href="{{ url_for('index.update_user_save') }}">用户存档更新 Update user saves</a></br></br>
 <a href="{{ url_for('index.change_song') }}">歌曲修改 Change the songs</a></br></br>
 <a href="{{ url_for('index.change_character') }}">角色修改 Change the characters</a></br></br>
-<a href="{{ url_for('index.change_item') }}">购买信息修改 Change the items</a></br></br>
+<a href="{{ url_for('index.change_item') }}">物品信息修改 Change the items</a></br></br>
+<a href="{{ url_for('index.change_purchase') }}">购买信息修改 Change the purchases</a></br></br>
+<a href="{{ url_for('index.change_purchase_item') }}">购买信息的物品修改 Change the purchase items</a></br></br>
 <a href="{{ url_for('index.change_user') }}">用户信息修改 Change user information</a></br></br>
 <a href="{{ url_for('index.change_user_purchase') }}">用户购买信息修改 Change user purchase information</a></br></br>
 <a href="{{ url_for('index.change_present') }}">奖励修改 Change the presents</a></br></br>
