--- a/latest version/templates/web/changepurchaseitem.html
+++ b/latest version/templates/web/changepurchaseitem.html
@@ -13,8 +13,8 @@
     <label for="type">Type</label>
     <div>
         <select name="type">
-            <option value='single' selected>Single</option>
-            <option value='pack'>Pack</option>
+            <option value='single' selected>Single song</option>
+            <option value='pack'>Song pack</option>
             <option value='world_song'>World song</option>
             <option value='character'>Character</option>
         </select>
