Update to v2.6.5 without release
- Change something to make that purchase things can have some cores.
- Fix the download link of Arcaea client in README

> This is a small update.

--- a/latest version/templates/web/allpurchase.html
+++ b/latest version/templates/web/allpurchase.html
@@ -37,6 +37,10 @@
     <span class="char-num">{{x['type']}}</span>
     <br />
 
+    <span>Amount: </span>
+    <span class="char-num">{{x['amount']}}</span>
+    <br />
+
 
 
     {% if not loop.last %}
