--- a/latest version/templates/web/changepurchaseitem.html
+++ b/latest version/templates/web/changepurchaseitem.html
@@ -17,8 +17,11 @@
             <option value='pack'>Song pack</option>
             <option value='world_song'>World song</option>
             <option value='character'>Character</option>
+            <option value='core'>Core</option>
         </select>
     </div>
+    <label for="amount">Amount</label>
+    <input name="amount" id="amount" value="1" required>
     <br />
     <input type="submit" value="Add">
 </form>
@@ -36,6 +39,7 @@
             <option value='pack'>Pack</option>
             <option value='world_song'>World song</option>
             <option value='character'>Character</option>
+            <option value='core'>Core</option>
         </select>
     </div>
     <br />
