Update to v2.8.2 without release
- Try to add support for Anniversary 5 ticket
- Update the song database

> Well, there may be bugs with Anniversary 5 ticket. Remember it can only be used when the pack is on sale.

--- a/latest version/templates/web/allpurchase.html
+++ b/latest version/templates/web/allpurchase.html
@@ -27,6 +27,10 @@
     <span>Discount to: </span>
     <span class="char-num">{{item['discount_to']}}</span>
     <br />
+
+    <span>Whether it is allowed to purchase with exchange certificate: </span>
+    <span class="char-num">{{item['discount_reason']}}</span>
+    <br />
     {% if item['items'] %}<br />
     {% for x in item['items'] %}
     <span>Item id: </span>
