--- a/latest version/templates/web/changepresent.html
+++ b/latest version/templates/web/changepresent.html
@@ -27,6 +27,7 @@
             <option value='core'>Character core</option>
             <option value='fragment'>Fragment</option>
             <option value='memory'>Memory</option>
+            <option value='anni5tix'>Anniversary 5 ticket</option>
         </select>
     </div>
     <label for="amount">Amount</label>
