--- a/latest version/templates/web/changepurchase.html
+++ b/latest version/templates/web/changepurchase.html
@@ -16,6 +16,10 @@
     <input type="datetime-local" name="discount_from" id="discount_from">
     <label for="discount_to">Discount to</label>
     <input type="datetime-local" name="discount_to" id="discount_to">
+    <div>是否允许使用兑换券购买 Whether it is allowed to purchase with Anniversary 5 ticket:
+        <label><input type="radio" name="discount_reason" value="0">No</label>
+        <label><input type="radio" name="discount_reason" value="anni5tix">Yes</label>
+    </div>
     <div class="content">时间填写是一个HTML5控件</div>
     <div class="content">Time filling is an HTML5 control.</div>
     <br />
