--- a/latest version/templates/web/allsong.html
+++ b/latest version/templates/web/allsong.html
@@ -11,7 +11,7 @@
     <span>Sid: </span>
     <span class="song-title">{{song['song_id']}}</span>
     <br />
-    <span>Name_en: </span>
+    <span>Name: </span>
     <span class="song-title">{{song['name_en']}}</span>
     <br />
     <div>铺面定数 Chart const: </div>
