[Enhance] Missions & ETR
- Add support for missions
- PTT mechanism: Change first play protection to new best protection
- Adapt to the new difficulty ETR
- Uncap DORO*C
- Incomplete support for "pick_ticket"
- Fix requirements: cryptography >= 35.0.0

Note: This is an intermediate test version, only for Arcaea 5.4.0c. Next version will adapt to 5.4.0.

--- a/latest version/static/style.css
+++ b/latest version/static/style.css
@@ -173,6 +173,12 @@ input[type=submit] {
     color: white;
 }
 
+.difficulty_etr {
+    font-size: 0.9em;
+    background-color: rgb(161, 132, 181);
+    color: white;
+}
+
 .rank {
     font-size: 0.8em;
     margin-left: 4px;
