--- a/latest version/templates/web/allsong.html
+++ b/latest version/templates/web/allsong.html
@@ -34,6 +34,11 @@
     <span class="difficulty_byd">BYD</span>
     <span class="song-rating">{{song['rating_byn']}}</span>
     {% endif %}
+    <br />
+    {% if song['rating_etr'] %}
+    <span class="difficulty_etr">ETR</span>
+    <span class="song-rating">{{song['rating_etr']}}</span>
+    {% endif %}
 
 
 </div>
