--- a/latest version/templates/web/changepresent.html
+++ b/latest version/templates/web/changepresent.html
@@ -28,6 +28,7 @@
             <option value='fragment'>Fragment</option>
             <option value='memory'>Memory</option>
             <option value='anni5tix'>Anniversary 5 ticket</option>
+            <option value='pick_ticket'>Pick ticket</option>
         </select>
     </div>
     <label for="amount">Amount</label>
