[Enhance] Content bundle
- Add support for content bundles
- For Arcaea 5.4.0 play store version and iOS version

--- a/latest version/templates/web/updatedatabase.html
+++ b/latest version/templates/web/updatedatabase.html
@@ -13,7 +13,8 @@
     这里可以将旧版本的数据库同步到新版本的数据库，并刷新用户拥有的全角色列表。<br />
     可上传文件: arcaea_database.db<br />
     新数据库不存在的数据会被添加，存在的重复数据也会被改变。<br /><br />
-    Here you can synchronize the old version of the database to the new version of the database and refresh the list of full
+    Here you can synchronize the old version of the database to the new version of the database and refresh the list of
+    full
     characters owned by players.<br />
     Uploadable files: arcaea_database.db<br />
     Data that does not exist in the new database will be added and the existing duplicate data will also be changed.
@@ -39,5 +40,17 @@
     <div class="content">这里可以刷新数据库中所有成绩的评分。目的是应对歌曲谱面定数的更新。</div>
     <div class="content">Here you can refresh the ratings of all scores in the database. The purpose is to deal
         with the updating of songs' chart consts.</div>
+</form>
+<br />
+<hr />
+<form action="/web/updatedatabase/refreshsbundle" method="post">
+    <div class="title">Refresh content bundles</div>
+    <br />
+    <input type="submit" value="Refresh">
+
+    <div class="content">这里可以刷新储存在内存中的 bundle 文件夹下所有热更新文件的信息。目的是应对热更新文件的修改。</div>
+    <div class="content">Here you can refresh the information of all the files stored in the bundle folder in memory.
+        The purpose
+        is to deal with the updating of content bundles.</div>
 </form>
 {% endblock %}
